Locking container width to fix view on mobile temporarily.

--- a/app/assets/stylesheets/partials/_layout.sass
+++ b/app/assets/stylesheets/partials/_layout.sass
@@ -1,4 +1,7 @@
 #container
-  +outer-container
+  // locking width
+  width: $column * 5
+  margin: 0 auto
+  //+outer-container
   padding: 0 $padding
   position: relative
